Blender multi monitor window save and restore issues #36707

Closed
opened 2013-09-12 00:30:55 +02:00 by holy enigma · 24 comments

%%%--- Operating System, Graphics card ---
Win7 64bit, geforce 8600gt, MinGW64

- Blender version with error, and version that worked ---

60053 has the error, 60026 works fine..
I believe the error was introduced 60046

- Short description of error ---

Blender window in MinGW64 opens in full-screen with no way to get the window
close button at the top.. my monitor resolution is 1920x1200

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Win7 64bit, geforce 8600gt, MinGW64 - Blender version with error, and version that worked --- 60053 has the error, 60026 works fine.. I believe the error was introduced 60046 - Short description of error --- Blender window in MinGW64 opens in full-screen with no way to get the window close button at the top.. my monitor resolution is 1920x1200 - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%For me it's even worse.
When I open Blender it's in Windowed Mode, I can minimize it then, but after reopening Blender freezes/crashes.

Win x64, MSVC 2008. %%%

%%%For me it's even worse. When I open Blender it's in Windowed Mode, I can minimize it then, but after reopening Blender freezes/crashes. Win x64, MSVC 2008. %%%
Member

%%%I see that the final window needs to be checked against desktop size and adjust when out of bounds. I'm working on that now.

What happens is that Blender gets created with its own real estate the size of your display. It has frameborders and caption alright, but they are just outside of your monitor.

@thomas-40, I don't see why Blender would freeze or crash, I doubt it is related to this particular commit. At least I was unable to reproduce. You should try to get a stack trace to verify (you can break in with msvc debugger).%%%

%%%I see that the final window needs to be checked against desktop size and adjust when out of bounds. I'm working on that now. What happens is that Blender gets created with its own real estate the size of your display. It has frameborders and caption alright, but they are just outside of your monitor. @thomas-40, I don't see why Blender would freeze or crash, I doubt it is related to this particular commit. At least I was unable to reproduce. You should try to get a stack trace to verify (you can break in with msvc debugger).%%%
Member

%%%A (potential) fix is in r60067. Please do test, as I have no real possibility to test on my 4-monitor system. (Don't want to start messing with the cabling).%%%

%%%A (potential) fix is in r60067. Please do test, as I have no real possibility to test on my 4-monitor system. (Don't want to start messing with the cabling).%%%

%%%No further crash for me, works fine. Waiting for confirmation from holy enigma.

Thanks Nathan! %%%

%%%No further crash for me, works fine. Waiting for confirmation from holy enigma. Thanks Nathan! %%%
Author

%%%seems to work, you just need to move the window
a little bit to get the bottom of the timeline above the windows taskbar.
then save "start up file" ctrl u

you can close this.

thanks. %%%

%%%seems to work, you just need to move the window a little bit to get the bottom of the timeline above the windows taskbar. then save "start up file" ctrl u you can close this. thanks. %%%
Member

%%%Thanks!

The taskbar bit will probably be tackled later.%%%

%%%Thanks! The taskbar bit will probably be tackled later.%%%

%%%I run Blender with window mode in a single desktop.
I make a full-screen mode afterwards.
The image of the full-screen mode is left to the desktop when it goes back up in window mode next.
It is overwritten the desktop normally when I move window.%%%

%%%I run Blender with window mode in a single desktop. I make a full-screen mode afterwards. The image of the full-screen mode is left to the desktop when it goes back up in window mode next. It is overwritten the desktop normally when I move window.%%%

%%%It looks like this.%%%

%%%It looks like this.%%%

%%%Possibly related; User Preferences used to open consistently on my left monitor, I run Blender on the right, the User Prefs now open straddling the two screens. I've tried saving .blend prefs and U.P. settings but that hasn't helped. As of r60143 Win 64 on Win 8.%%%

%%%Possibly related; User Preferences used to open consistently on my left monitor, I run Blender on the right, the User Prefs now open straddling the two screens. I've tried saving .blend prefs and U.P. settings but that hasn't helped. As of r60143 Win 64 on Win 8.%%%

%%%I attached image.%%%

%%%I attached image.%%%
Member

%%%perfection cat, does the draw error (desktop background corruption) still happen? TBH this is a different error than the one initially reported here though. Sounds more like an OpenGL error.%%%

%%%perfection cat, does the draw error (desktop background corruption) still happen? TBH this is a different error than the one initially reported here though. Sounds more like an OpenGL error.%%%

%%%I looked into this today, and found there are a number of things broken:
a) By default, Blender opens overlapped with the taskbar.
b) When opening the user preferences or render window with mouse near edge of the screen, the window is opened too small.
c) On multi monitor setups, the user preferences open straddling two monitors when the mouse is near the edge of a monitor.
d) On multi monitor setups, the default Blender opens up on one monitor, but actually overlaps with the second monitor slightly as well.

In my opinion, a) and b) are showstopper regressions for a release. While Blender not remembering its position when spanning across a monitor is bad, opening the window like this the first time a user starts Blender is not acceptable. Further, a proper fix may change behavior again, which means users would have to adjust to the new situation twice. I suggest to revert the recent series of fixes and do a proper multi monitor fix after the release, because I can't see a simple safe fix here.

In my opinion the ideal behavior would be:

  • By default, Blender should open to fit exactly one monitor, without overlapping the taskbar.
  • When saving the startup.blend, restarting should restore exactly the same setup.
  • User preferences and render window should open on one monitor and keep their requested size.

Issues in the code:

  • wm_window_check_position does not take taskbar, window frame, caption or virtual screen left/top into account, so relying on it the position the window if it goes past the border does not work, s the ghost function now simply clamps without moving the window.
  • wm_window_check_position should not use the virtual screen but a single monitor, as this function is only used for user preferences and render view.
  • There is no clear distinction between starting blender for the first time and loading a saved window setup.%%%
%%%I looked into this today, and found there are a number of things broken: a) By default, Blender opens overlapped with the taskbar. b) When opening the user preferences or render window with mouse near edge of the screen, the window is opened too small. c) On multi monitor setups, the user preferences open straddling two monitors when the mouse is near the edge of a monitor. d) On multi monitor setups, the default Blender opens up on one monitor, but actually overlaps with the second monitor slightly as well. In my opinion, a) and b) are showstopper regressions for a release. While Blender not remembering its position when spanning across a monitor is bad, opening the window like this the first time a user starts Blender is not acceptable. Further, a proper fix may change behavior again, which means users would have to adjust to the new situation twice. I suggest to revert the recent series of fixes and do a proper multi monitor fix after the release, because I can't see a simple safe fix here. In my opinion the ideal behavior would be: * By default, Blender should open to fit exactly one monitor, without overlapping the taskbar. * When saving the startup.blend, restarting should restore exactly the same setup. * User preferences and render window should open on one monitor and keep their requested size. Issues in the code: * wm_window_check_position does not take taskbar, window frame, caption or virtual screen left/top into account, so relying on it the position the window if it goes past the border does not work, s the ghost function now simply clamps without moving the window. * wm_window_check_position should not use the virtual screen but a single monitor, as this function is only used for user preferences and render view. * There is no clear distinction between starting blender for the first time and loading a saved window setup.%%%

%%%I had the same awful fullscreen problem on MacOS X 10.7.5, the usual OS controls were unavailable and it wasn't until I found the setting in 'Window' menu next to 'Help' which is called 'Toggle Fullscreen' (Alt-F11).

What is really bizarre about this is that normally when a window is in fullscreen on Mac OS, you can hover the mouse near the top of the screen and a menu bar will pop down and at the very right hand side there will be a fullscreen toggle button. When Blender was stuck in fullscreen there was no toggle button present. I've just noticed that if I use the OS fullscreen toggle that is on the window then I have the same toggle on the drop down bar in fullscreen, however, if I use the Blender Alt-F11 shortcut then the OS seems to fail to recognize the fullscreen mode and no toggle button shows up on the drop-down bar. At least Alt-F11 works for me.%%%

%%%I had the same awful fullscreen problem on MacOS X 10.7.5, the usual OS controls were unavailable and it wasn't until I found the setting in 'Window' menu next to 'Help' which is called 'Toggle Fullscreen' (Alt-F11). What is really bizarre about this is that normally when a window is in fullscreen on Mac OS, you can hover the mouse near the top of the screen and a menu bar will pop down and at the very right hand side there will be a fullscreen toggle button. When Blender was stuck in fullscreen there was no toggle button present. I've just noticed that if I use the OS fullscreen toggle that is on the window then I have the same toggle on the drop down bar in fullscreen, however, if I use the Blender Alt-F11 shortcut then the OS seems to fail to recognize the fullscreen mode and no toggle button shows up on the drop-down bar. At least Alt-F11 works for me.%%%

%%%I agree with Brecht here, revert the fix, and do a proper multi monitor fix after the release. %%%

%%%I agree with Brecht here, revert the fix, and do a proper multi monitor fix after the release. %%%

%%%Revision 59985, 59986, 60046 and 60067 were reverted for the release now.%%%

%%%Revision 59985, 59986, 60046 and 60067 were reverted for the release now.%%%

Added subscriber: @Sergey

Added subscriber: @Sergey

There were some fixes, reverts, fixes again.. What's the status here? Does it still happen with 2.71-testbuild2?

There were some fixes, reverts, fixes again.. What's the status here? Does it still happen with 2.71-testbuild2?
Author

seems to work ok on my machine..(compiled a mingw64 version yesterday)
haven't had this bug in a long time, thought it was solved.

seems to work ok on my machine..(compiled a mingw64 version yesterday) haven't had this bug in a long time, thought it was solved.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Since the multi-monitor changes where reverted the described error doesn't happen anymore. Also based on report from @holyenigma I close this.

Since the multi-monitor changes where reverted the described error doesn't happen anymore. Also based on report from @holyenigma I close this.

The error is not output by a console.
It may occur only with a single monitor.
When I lower window size of Blender than that of desktop and make a full window and I correct it to a window again, an afterimage stays to the desktop.
This problem is still unsolved.

I confirmed that it reappeared in blender-2.70a-windows32.

The error is not output by a console. It may occur only with a single monitor. When I lower window size of Blender than that of desktop and make a full window and I correct it to a window again, an afterimage stays to the desktop. This problem is still unsolved. I confirmed that it reappeared in blender-2.70a-windows32.
Member

That's a separate problem from the original report, please log a separate bug report for that.

That's a separate problem from the original report, please log a separate bug report for that.

I reported it particularly, but should have been unified here.
I do not remember it anymore.

I reported it particularly, but should have been unified here. I do not remember it anymore.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36707
No description provided.